welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:41: error: not found: value cerlce
cerlce;
^PatternPicture:42: error: not found: value cerlce
cerlce;
^